2006-04-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* smiley.el (smiley-style): Default to `medium' if using a large
	font.

	* gnus-sum.el (unmorse-region): Remove autoload, because morse.el
	does it itself.

	* message.el (message-point-in-header-p): Simplify definition.

2006-04-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnagent.el (nnagent-request-set-mark): Silence log file
	writing. 
	(nnagent-request-set-mark): Use write-region instead of
	append-to-file. 

	* gnus-sum.el (gnus-read-header): Fudge article number if using a
	strange select method.

	* ecomplete.el (ecomplete-display-matches): Get highlightling
	right. 
	(ecomplete-display-matches): Use literals.
	(ecomplete-display-matches): Disable message logging.

	* message.el (message-display-abbrev): Small optimization.

	* ecomplete.el (ecomplete-display-matches): Allow automatic
	display. 

	* message.el (message-strip-forbidden-properties): Display
	abbrevs. 
	(message-display-abbrev): Get automatic display right.

	* ecomplete.el (ecomplete-display-matches): Use M-n/M-p
	keystrokes. 

2006-04-13  Romain Francoise  <romain@orebokech.com>

	* gnus-util.el (gnus-alist-to-hashtable, gnus-hashtable-to-alist):
	Moved here (and renamed) from gnus-registry.el.

	* gnus-registry.el: Require gnus-util.
	Use `gnus-alist-to-hashtable' and `gnus-hashtable-to-alist'.

2006-04-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-catchup-current): Change
	if-then-else-if-then-else into cond.
	(gnus-group-catchup): Indent.
	(group-name-at-point): New function.
	(gnus-fetch-group): Provide default from thing at point.

2006-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-display-abbrev): Fix regexp.

	* ecomplete.el (ecomplete-highlight-match-line): Reimplement
	choosing.
	(ecomplete-highlight-match-line): Fix up code rewrite, remove
	dead variables.

	* message.el (message-newline-and-indent): Remove debugging.