@@ -1,5 +1,9 @@
 2006-04-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-sum.el (gnus-summary-reparent-thread): Factor out
+	reparenting code.
+	(gnus-summary-reparent-children): Refactored out code.
+
 	* smiley.el (smiley-style): Default to `medium' if using a large
 	font.
 
